# data-engineering-portfolio-project

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/skills/dbt-check/: SKILL.md
.claude/skills/verify/: SKILL.md
src/panel/: app.py  db.py  nlp.py  queries.py
src/scrapers/: olx.py
tests/: test_panel_e2e.py
